Fix navbar collapse point

--- a/app/styles/variables.less
+++ b/app/styles/variables.less
@@ -282,7 +282,7 @@
 // Navbar collapse
 
 // Point at which the navbar becomes uncollapsed
-@grid-float-breakpoint:     @screen-sm-min;
+@grid-float-breakpoint:     @screen-sm-min + 200px;
 // Point at which the navbar begins collapsing
 @grid-float-breakpoint-max: (@grid-float-breakpoint - 1);
 
